--- a/package.json
+++ b/package.json
@@ -26,9 +26,13 @@
   },
   "homepage": "https://github.com/That4wkwardGuy/Learning-Platform#readme",
   "dependencies": {
+    "bcrypt": "^3.0.0",
+    "body-parser": "^1.18.3",
     "concurrently": "^3.6.1",
     "express": "^4.16.3",
     "mongoose": "^5.2.6",
-    "nodemon": "^1.18.3"
+    "nodemon": "^1.18.3",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0"
   }
 }
