--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "body-parser": "^1.18.3",
     "concurrently": "^3.6.1",
     "express": "^4.16.3",
+    "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.2.6",
     "nodemon": "^1.18.3",
     "passport": "^0.4.0",
