--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start-react": "cd client/ && npm run start",
-    "start": "concurrently \"nodemon\" \"npm run start-react\" "
+    "start": "concurrently \"nodemon\" \"npm run start-react\" ",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "repository": {
     "type": "git",
