--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "concurrently": "^3.6.1",
     "cors": "^2.8.4",
     "express": "^4.16.3",
+    "heap": "^0.2.6",
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.2.6",
     "nodemon": "^1.18.3",
